--- a/AspCoreMVC/AspCoreMVC/AspCoreMVC.csproj
+++ b/AspCoreMVC/AspCoreMVC/AspCoreMVC.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\AspCore.Utility\AspCore.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
